# cs224n

./: .gitignore  .gitmodules  README.md  eval.py  eval_7b.py  eval_sweep_7b.py  eval_sweep_7b_v2.py  eval_sweep_7b_v3.py  export_rag_chunks_md.py  logs.txt  main.py  main_7b.py  main_7b_v2.py  main_7b_v3.py  modal_app.py  modal_app_7b.py  modal_app_7b_v1_newrag.py  modal_app_7b_v2.py  modal_app_7b_v3.py  pyproject.toml  rag_chunks_all_runs.md  rag_chunks_v1_newrag.md  references.bib  report.tex  test_loop.py
agent/: config.py  model.py  model_7b.py  rag.py  router.py  sdpo_update.py  sdpo_update_7b.py  sdpo_update_7b_v2.py  sdpo_update_7b_v3.py  verification.py
eval/: analyze_modal_run_metrics.py  eval.py  eval_7b.py  eval_sweep_7b.py  eval_sweep_7b_v2.py  eval_sweep_7b_v3.py
poster/: beamerthemegemini.sty  main.tex  poster.bib
training/: main.py  main_7b.py  main_7b_v2.py  main_7b_v3.py  modal_app.py  modal_app_7b.py  modal_app_7b_v2.py  modal_app_7b_v3.py
